--- a/public/sass/global.scss
+++ b/public/sass/global.scss
@@ -28,10 +28,12 @@
 
 h1 {
 	font-size: 12pt;
+	font-weight: bold;
 	img { vertical-align:middle; }
 }
 h2 {
 	font-size: 11pt;
+	font-weight: bold;
 	img { vertical-align:middle; }
 }
 * {
