--- a/public/sass/global.scss
+++ b/public/sass/global.scss
@@ -26,16 +26,6 @@
 	);
 }
 
-h1 {
-	font-size: 12pt;
-	font-weight: bold;
-	img { vertical-align:middle; }
-}
-h2 {
-	font-size: 11pt;
-	font-weight: bold;
-	img { vertical-align:middle; }
-}
 * {
 	@include border-box;
 }
@@ -97,6 +87,17 @@ ol.breadcrumb {
 
 #main_beta {
 	position: relative;
+
+	h1 {
+		font-size: 12pt;
+		font-weight: bold;
+		img { vertical-align:middle; }
+	}
+	h2 {
+		font-size: 11pt;
+		font-weight: bold;
+		img { vertical-align:middle; }
+	}
 }
 
 .birthday {
@@ -124,7 +125,10 @@ p {
 		margin: 0 0 10px 0;
 	}
 }
-		
+.jumbotron blockquote p {
+	font-size: 17.5px;
+}
+
 #avatars {
 	height:160px; overflow:auto;
 	.avat {
@@ -201,9 +205,10 @@ table.table {
 		&.topic {
 			padding: 6px;
 
-			.thread_preview {
+			.thread-preview {
 				width: 100%;
-				height:1.2em;
+				height: 1.5em;
+				line-height: 1.8em;
 				overflow: hidden;
 			}
 		}
