--- a/public/css/global.css
+++ b/public/css/global.css
@@ -319,50 +319,55 @@ p.photo-description {
   margin: 0;
 }
 
-/* line 149, ../sass/global.scss */
+/* line 148, ../sass/global.scss */
+textarea.form-control.textarea-sm {
+  height: 5em;
+}
+
+/* line 153, ../sass/global.scss */
 .panel-footer .form-group {
   margin-bottom: 0;
 }
 
-/* line 154, ../sass/global.scss */
+/* line 158, ../sass/global.scss */
 footer {
   margin-bottom: 20px;
   text-align: center;
   font-size: 8pt;
   color: #ccc;
 }
-/* line 159, ../sass/global.scss */
+/* line 163, ../sass/global.scss */
 footer a {
   margin-left: 13px;
 }
 
-/* line 164, ../sass/global.scss */
+/* line 168, ../sass/global.scss */
 .album {
   padding: 5px 15px 5px 5px;
   border: 0;
   height: 162px;
   position: relative;
 }
-/* line 168, ../sass/global.scss */
+/* line 172, ../sass/global.scss */
 .album .photo {
   position: absolute;
   z-index: 10;
 }
-/* line 169, ../sass/global.scss */
+/* line 173, ../sass/global.scss */
 .album .description {
   position: absolute;
   z-index: 1;
   padding: 10px 5px 10px 230px;
 }
 
-/* line 172, ../sass/global.scss */
+/* line 176, ../sass/global.scss */
 .photo, .photo-large {
   float: left;
   padding: 5px;
   border: 0;
   text-align: center;
 }
-/* line 175, ../sass/global.scss */
+/* line 179, ../sass/global.scss */
 .photo a.thumb, .photo-large a.thumb {
   display: block;
   background: #888;
@@ -371,139 +376,139 @@ footer a {
   text-decoration: none;
   padding: 5px;
 }
-/* line 178, ../sass/global.scss */
+/* line 182, ../sass/global.scss */
 .photo a.thumb:hover, .photo-large a.thumb:hover {
   background: #999;
   border: 1px solid #444;
 }
-/* line 180, ../sass/global.scss */
+/* line 184, ../sass/global.scss */
 .photo.large, .photo-large.large {
   float: none;
 }
 
-/* line 182, ../sass/global.scss */
+/* line 186, ../sass/global.scss */
 .photo {
   width: 222px;
   height: 172px;
 }
 
-/* line 188, ../sass/global.scss */
+/* line 192, ../sass/global.scss */
 table.table td.icon {
   padding: 6px 0 0;
   text-align: center;
   vertical-align: middle;
 }
-/* line 193, ../sass/global.scss */
+/* line 197, ../sass/global.scss */
 table.table td.icon.wide {
   padding: 4px 0;
 }
-/* line 197, ../sass/global.scss */
+/* line 201, ../sass/global.scss */
 table.table td.forum {
   padding: 6px;
   vertical-align: middle;
 }
-/* line 201, ../sass/global.scss */
+/* line 205, ../sass/global.scss */
 table.table td.forum a {
   font-weight: bold;
 }
-/* line 205, ../sass/global.scss */
+/* line 209, ../sass/global.scss */
 table.table td.topic {
   padding: 6px;
 }
-/* line 208, ../sass/global.scss */
+/* line 212, ../sass/global.scss */
 table.table td.topic .thread-preview {
   width: 100%;
   height: 1.5em;
   line-height: 1.8em;
   overflow: hidden;
 }
-/* line 215, ../sass/global.scss */
+/* line 219, ../sass/global.scss */
 table.table td.lastpost {
   padding: 6px;
   vertical-align: middle;
 }
-/* line 219, ../sass/global.scss */
+/* line 223, ../sass/global.scss */
 table.table td.lastpost a {
   font-weight: bold;
 }
-/* line 220, ../sass/global.scss */
+/* line 224, ../sass/global.scss */
 table.table td.lastpost div a {
   font-weight: normal;
 }
-/* line 221, ../sass/global.scss */
+/* line 225, ../sass/global.scss */
 table.table td.lastpost.topic {
   text-align: right;
   font-size: 10pt;
 }
-/* line 222, ../sass/global.scss */
+/* line 226, ../sass/global.scss */
 table.table td.lastpost.message {
   font-size: 10pt;
   color: #999;
 }
-/* line 224, ../sass/global.scss */
+/* line 228, ../sass/global.scss */
 table.table td.score {
   padding: 4px 0;
 }
-/* line 225, ../sass/global.scss */
+/* line 229, ../sass/global.scss */
 table.table td.ending {
   font-size: 10pt;
 }
-/* line 226, ../sass/global.scss */
+/* line 230, ../sass/global.scss */
 table.table td.date {
   font-size: 10pt;
   text-align: center;
 }
-/* line 227, ../sass/global.scss */
+/* line 231, ../sass/global.scss */
 table.table td.posts {
   font-size: 10pt;
   text-align: center;
   color: #aaa;
 }
-/* line 228, ../sass/global.scss */
+/* line 232, ../sass/global.scss */
 table.table td.nowrap {
   white-space: nowrap;
 }
-/* line 231, ../sass/global.scss */
+/* line 235, ../sass/global.scss */
 table.table th.date, table.table th.posts {
   text-align: center;
 }
-/* line 238, ../sass/global.scss */
+/* line 242, ../sass/global.scss */
 table.table tr.unread td.topic a, table.table tr.unread td.from a {
   font-weight: bold;
 }
-/* line 243, ../sass/global.scss */
+/* line 247, ../sass/global.scss */
 table.table tr.selected td {
   background: #555 !important;
 }
-/* line 245, ../sass/global.scss */
+/* line 249, ../sass/global.scss */
 table.table .tiny {
   font-size: 9pt;
   color: #000 !important;
   font-weight: normal !important;
 }
-/* line 247, ../sass/global.scss */
+/* line 251, ../sass/global.scss */
 table.table th.icon, table.table td.icon {
   width: 50px;
 }
-/* line 248, ../sass/global.scss */
+/* line 252, ../sass/global.scss */
 table.table th.icon.wide, table.table td.icon.wide {
   width: 55px;
 }
-/* line 250, ../sass/global.scss */
+/* line 254, ../sass/global.scss */
 table.table .posts {
   width: 80px;
 }
 
-/* line 252, ../sass/global.scss */
+/* line 256, ../sass/global.scss */
 .table.no-border {
   background: none;
 }
-/* line 256, ../sass/global.scss */
+/* line 260, ../sass/global.scss */
 .table.no-border > tbody > tr th, .table.no-border > tbody > tr td {
   border-top: none;
 }
 
-/* line 262, ../sass/global.scss */
+/* line 266, ../sass/global.scss */
 .smileys {
   border: 1px solid #666;
   padding: 6px;
@@ -513,53 +518,53 @@ table.table .posts {
   font-size: 10pt;
 }
 
-/* line 270, ../sass/global.scss */
+/* line 274, ../sass/global.scss */
 .emote {
   padding: 4px 6px 2px 6px;
   float: left;
   border: 1px solid transparent;
 }
-/* line 274, ../sass/global.scss */
+/* line 278, ../sass/global.scss */
 .emote:hover {
   background: #5f5f5f;
   border: 1px solid #333;
 }
-/* line 275, ../sass/global.scss */
+/* line 279, ../sass/global.scss */
 .emote:active {
   background: #444;
   border: 1px solid #222;
 }
 
-/* line 278, ../sass/global.scss */
+/* line 282, ../sass/global.scss */
 ul.dropdown-menu.bbcode-menu {
   cursor: default;
 }
-/* line 282, ../sass/global.scss */
+/* line 286, ../sass/global.scss */
 ul.dropdown-menu.bbcode-menu li:hover {
   background: #5f5f5f;
 }
-/* line 285, ../sass/global.scss */
+/* line 289, ../sass/global.scss */
 ul.dropdown-menu.bbcode-size {
   min-width: 100px;
 }
-/* line 288, ../sass/global.scss */
+/* line 292, ../sass/global.scss */
 ul.dropdown-menu.bbcode-size li {
   padding: 2px 8px;
 }
-/* line 290, ../sass/global.scss */
+/* line 294, ../sass/global.scss */
 ul.dropdown-menu.bbcode-color {
   min-width: 152px;
   width: 152px;
   padding-left: 3px;
 }
-/* line 295, ../sass/global.scss */
+/* line 299, ../sass/global.scss */
 ul.dropdown-menu.bbcode-color li {
   display: block;
   float: left;
   padding: 3px;
   font-size: 0;
 }
-/* line 301, ../sass/global.scss */
+/* line 305, ../sass/global.scss */
 ul.dropdown-menu.bbcode-color li span {
   display: block;
   border: 1px solid #aca899;
@@ -567,49 +572,49 @@ ul.dropdown-menu.bbcode-color li span {
   width: 12px;
 }
 
-/* line 310, ../sass/global.scss */
+/* line 314, ../sass/global.scss */
 .btn.btn-bbcode {
   min-width: 32px;
   height: 30px;
   overflow: hidden;
 }
-/* line 315, ../sass/global.scss */
+/* line 319, ../sass/global.scss */
 .btn.btn-bbcode .bbcode-quote {
   font-size: 36px;
   line-height: 1;
   display: block;
 }
-/* line 320, ../sass/global.scss */
+/* line 324, ../sass/global.scss */
 .btn.btn-bbcode .bbcode-underline {
   text-decoration: underline;
   font-size: 15px;
   line-height: 12px;
 }
-/* line 325, ../sass/global.scss */
+/* line 329, ../sass/global.scss */
 .btn.btn-bbcode .bbcode-strikethrough {
   text-decoration: line-through;
   font-size: 15px;
   line-height: 12px;
 }
-/* line 330, ../sass/global.scss */
+/* line 334, ../sass/global.scss */
 .btn.btn-bbcode .bbcode-ol {
   font-size: 9px;
   line-height: 10px;
   display: block;
 }
 
-/* line 337, ../sass/global.scss */
+/* line 341, ../sass/global.scss */
 table.calendar {
   padding: 0;
   border-collapse: collapse;
 }
-/* line 339, ../sass/global.scss */
+/* line 343, ../sass/global.scss */
 table.calendar th {
   text-align: center;
   width: 14%;
   color: #ccc;
 }
-/* line 340, ../sass/global.scss */
+/* line 344, ../sass/global.scss */
 table.calendar td.day {
   width: 14%;
   height: 85px;
@@ -619,33 +624,33 @@ table.calendar td.day {
   padding: 4px;
   font-size: 8pt;
 }
-/* line 343, ../sass/global.scss */
+/* line 347, ../sass/global.scss */
 table.calendar td.day.has-events {
   border: 2px solid #000;
   background: #7f7f7f;
 }
-/* line 344, ../sass/global.scss */
+/* line 348, ../sass/global.scss */
 table.calendar td.day.today {
   border: 2px solid #000;
 }
-/* line 345, ../sass/global.scss */
+/* line 349, ../sass/global.scss */
 table.calendar td.day.today.has-events {
   background: #999;
 }
 
-/* line 352, ../sass/global.scss */
+/* line 356, ../sass/global.scss */
 #shoutbox a.at_reply {
   color: #ccc;
   text-decoration: none;
 }
-/* line 354, ../sass/global.scss */
+/* line 358, ../sass/global.scss */
 #shoutbox th.date {
   background: #3e444c;
   color: #eee;
   text-align: right;
 }
 
-/* line 361, ../sass/global.scss */
+/* line 365, ../sass/global.scss */
 #embed #shoutbox tbody {
   display: block;
   font-size: 10pt;
@@ -653,7 +658,7 @@ table.calendar td.day.today.has-events {
   overflow: auto;
 }
 
-/* line 369, ../sass/global.scss */
+/* line 373, ../sass/global.scss */
 .attachment-box {
   margin: 15px 0 0;
   padding: 8px 0;
@@ -661,7 +666,7 @@ table.calendar td.day.today.has-events {
   border-bottom: 1px solid #999;
 }
 
-/* line 374, ../sass/global.scss */
+/* line 378, ../sass/global.scss */
 a.scaled {
   text-decoration: none;
   display: block;
@@ -672,32 +677,32 @@ a.scaled {
   font-size: 10pt;
 }
 
-/* line 379, ../sass/global.scss */
+/* line 383, ../sass/global.scss */
 .quote {
   margin: 5px 0 5px 20px;
   border: 1px solid #333;
   background: #777;
   padding: 0;
 }
-/* line 381, ../sass/global.scss */
+/* line 385, ../sass/global.scss */
 .quote .author {
   margin: 0;
   padding: 5px;
   border-bottom: 1px solid #333;
   background: #555;
 }
-/* line 383, ../sass/global.scss */
+/* line 387, ../sass/global.scss */
 .quote .author img {
   margin-left: 10px;
   vertical-align: middle;
 }
-/* line 385, ../sass/global.scss */
+/* line 389, ../sass/global.scss */
 .quote .content {
   margin: 0;
   padding: 5px 15px 5px 5px;
 }
 
-/* line 388, ../sass/global.scss */
+/* line 392, ../sass/global.scss */
 .spoiler-alert {
   color: #900;
   background: #777;
@@ -706,13 +711,13 @@ a.scaled {
   text-decoration: none;
   padding: 2px 5px;
 }
-/* line 391, ../sass/global.scss */
+/* line 395, ../sass/global.scss */
 .spoiler-alert:hover {
   color: #060;
   border: 2px dashed #060;
 }
 
-/* line 393, ../sass/global.scss */
+/* line 397, ../sass/global.scss */
 .spoiler {
   display: none;
   border: 2px dashed #900;
@@ -720,7 +725,7 @@ a.scaled {
   padding: 5px;
 }
 
-/* line 397, ../sass/global.scss */
+/* line 401, ../sass/global.scss */
 pre.code {
   font-size: 10pt;
   font-family: "Courier New",mono;
@@ -733,18 +738,18 @@ pre.code {
   overflow-x: auto;
 }
 
-/* line 403, ../sass/global.scss */
+/* line 407, ../sass/global.scss */
 .sig {
   border-top: 1px dotted #ccc;
   color: #ccc;
   font-size: 10pt;
 }
-/* line 407, ../sass/global.scss */
+/* line 411, ../sass/global.scss */
 .sig object {
   display: none;
 }
 
-/* line 410, ../sass/global.scss */
+/* line 414, ../sass/global.scss */
 .thumbnail-selector {
   float: left;
   width: 500px;
@@ -757,93 +762,93 @@ pre.code {
   line-height: 0;
   padding: 10px 5px;
 }
-/* line 413, ../sass/global.scss */
+/* line 417, ../sass/global.scss */
 .thumbnail-selector .thumbnail {
   margin: 0 3px;
   height: 150px;
   display: inline-block;
 }
-/* line 415, ../sass/global.scss */
+/* line 419, ../sass/global.scss */
 .thumbnail-selector .thumbnail div {
   margin: auto;
   text-align: center;
   padding: 2px;
   font-size: 0;
 }
-/* line 417, ../sass/global.scss */
+/* line 421, ../sass/global.scss */
 .thumbnail-selector .thumbnail div.sel {
   padding: 0;
   border: 2px solid #00f;
 }
 
 @media all and (max-width: 767px) {
-  /* line 424, ../sass/global.scss */
+  /* line 428, ../sass/global.scss */
   table.table th.icon, table.table td.icon {
     width: 30px;
   }
-  /* line 426, ../sass/global.scss */
+  /* line 430, ../sass/global.scss */
   table.table th.icon.wide, table.table td.icon.wide {
     width: 35px;
   }
 
-  /* line 429, ../sass/global.scss */
+  /* line 433, ../sass/global.scss */
   .album {
     width: 100%;
     height: 97px;
   }
-  /* line 431, ../sass/global.scss */
+  /* line 435, ../sass/global.scss */
   .album .photo {
     width: 122px;
     height: 97px;
   }
-  /* line 433, ../sass/global.scss */
+  /* line 437, ../sass/global.scss */
   .album .photo img {
     max-width: 100px;
     max-height: 75px;
   }
-  /* line 435, ../sass/global.scss */
+  /* line 439, ../sass/global.scss */
   .album .description {
     padding-left: 130px;
   }
 
-  /* line 439, ../sass/global.scss */
+  /* line 443, ../sass/global.scss */
   footer #social-media {
     float: none;
     margin: 0 0 10px;
   }
-  /* line 441, ../sass/global.scss */
+  /* line 445, ../sass/global.scss */
   footer #social-media img {
     margin: 0;
   }
-  /* line 442, ../sass/global.scss */
+  /* line 446, ../sass/global.scss */
   footer #social-media a {
     margin: 0 3px;
   }
 
-  /* line 446, ../sass/global.scss */
+  /* line 450, ../sass/global.scss */
   div.scaled {
     display: none;
   }
 
-  /* line 447, ../sass/global.scss */
+  /* line 451, ../sass/global.scss */
   img.post-image {
     max-width: 100%;
     height: auto;
   }
 }
 @media print {
-  /* line 451, ../sass/global.scss */
+  /* line 455, ../sass/global.scss */
   a {
     color: #369 !important;
     text-decoration: none;
   }
 
-  /* line 452, ../sass/global.scss */
+  /* line 456, ../sass/global.scss */
   nav, #babynav, header, footer, #quick-reply, .jumpbox, .btn {
     display: none;
   }
 
-  /* line 455, ../sass/global.scss */
+  /* line 459, ../sass/global.scss */
   img {
     max-width: 100%;
     height: auto;
