--- a/public/sass/global.scss
+++ b/public/sass/global.scss
@@ -145,6 +145,10 @@ p {
 	margin: 0;
 }
 
+textarea.form-control.textarea-sm {
+	height: 5em;
+}
+
 .panel-footer {
 	.form-group {
 		margin-bottom: 0;
