--- a/public/sass/global.scss
+++ b/public/sass/global.scss
@@ -424,6 +424,10 @@ pre.code {
 	color:#ccc; word-wrap:normal; overflow-x:auto;
 }
 
+.gold-icon {
+	color: #ffe400;
+}
+
 .sig {
 	border-top: 1px dotted $sig-color;
 	color: $sig-color;
