--- a/public/css/global.css
+++ b/public/css/global.css
@@ -331,24 +331,33 @@ textarea.form-control.textarea-sm {
 
 /* line 158, ../sass/global.scss */
 footer {
-  margin-bottom: 20px;
+  margin: 20px 0;
   text-align: center;
   font-size: 8pt;
   color: #ccc;
 }
 /* line 163, ../sass/global.scss */
-footer a {
-  margin-left: 13px;
+footer ul.footer {
+  margin: 0;
+  padding: 0;
+  display: inline;
+}
+/* line 167, ../sass/global.scss */
+footer ul.footer li {
+  margin: 0 6px;
+  padding: 0;
+  list-style-type: none;
+  display: inline;
 }
 
-/* line 168, ../sass/global.scss */
+/* line 175, ../sass/global.scss */
 .album {
   padding: 0 15px 0 242px;
   border: 0;
   height: 182px;
   position: relative;
 }
-/* line 174, ../sass/global.scss */
+/* line 181, ../sass/global.scss */
 .album .photo {
   position: absolute;
   margin: 0;
@@ -357,14 +366,14 @@ footer a {
   z-index: 10;
 }
 
-/* line 182, ../sass/global.scss */
+/* line 189, ../sass/global.scss */
 .photo, .photo-large {
   float: left;
   margin: 10px;
   border: 0;
   text-align: center;
 }
-/* line 188, ../sass/global.scss */
+/* line 195, ../sass/global.scss */
 .photo a.thumb, .photo-large a.thumb {
   display: block;
   background: #888;
@@ -373,139 +382,139 @@ footer a {
   text-decoration: none;
   padding: 5px;
 }
-/* line 196, ../sass/global.scss */
+/* line 203, ../sass/global.scss */
 .photo a.thumb:hover, .photo-large a.thumb:hover {
   background: #999;
   border: 1px solid #444;
 }
-/* line 201, ../sass/global.scss */
+/* line 208, ../sass/global.scss */
 .photo.large, .photo-large.large {
   float: none;
 }
 
-/* line 205, ../sass/global.scss */
+/* line 212, ../sass/global.scss */
 .photo {
   width: 212px;
   height: 162px;
 }
 
-/* line 212, ../sass/global.scss */
+/* line 219, ../sass/global.scss */
 table.table td.icon {
   padding: 6px 0 0;
   text-align: center;
   vertical-align: middle;
 }
-/* line 217, ../sass/global.scss */
+/* line 224, ../sass/global.scss */
 table.table td.icon.wide {
   padding: 4px 0;
 }
-/* line 221, ../sass/global.scss */
+/* line 228, ../sass/global.scss */
 table.table td.forum {
   padding: 6px;
   vertical-align: middle;
 }
-/* line 225, ../sass/global.scss */
+/* line 232, ../sass/global.scss */
 table.table td.forum a {
   font-weight: bold;
 }
-/* line 229, ../sass/global.scss */
+/* line 236, ../sass/global.scss */
 table.table td.topic {
   padding: 6px;
 }
-/* line 232, ../sass/global.scss */
+/* line 239, ../sass/global.scss */
 table.table td.topic .thread-preview {
   width: 100%;
   height: 1.5em;
   line-height: 1.8em;
   overflow: hidden;
 }
-/* line 239, ../sass/global.scss */
+/* line 246, ../sass/global.scss */
 table.table td.lastpost {
   padding: 6px;
   vertical-align: middle;
 }
-/* line 243, ../sass/global.scss */
+/* line 250, ../sass/global.scss */
 table.table td.lastpost a {
   font-weight: bold;
 }
-/* line 244, ../sass/global.scss */
+/* line 251, ../sass/global.scss */
 table.table td.lastpost div a {
   font-weight: normal;
 }
-/* line 245, ../sass/global.scss */
+/* line 252, ../sass/global.scss */
 table.table td.lastpost.topic {
   text-align: right;
   font-size: 10pt;
 }
-/* line 246, ../sass/global.scss */
+/* line 253, ../sass/global.scss */
 table.table td.lastpost.message {
   font-size: 10pt;
   color: #999;
 }
-/* line 248, ../sass/global.scss */
+/* line 255, ../sass/global.scss */
 table.table td.score {
   padding: 4px 0;
 }
-/* line 249, ../sass/global.scss */
+/* line 256, ../sass/global.scss */
 table.table td.ending {
   font-size: 10pt;
 }
-/* line 250, ../sass/global.scss */
+/* line 257, ../sass/global.scss */
 table.table td.date {
   font-size: 10pt;
   text-align: center;
 }
-/* line 251, ../sass/global.scss */
+/* line 258, ../sass/global.scss */
 table.table td.posts {
   font-size: 10pt;
   text-align: center;
   color: #aaa;
 }
-/* line 252, ../sass/global.scss */
+/* line 259, ../sass/global.scss */
 table.table td.nowrap {
   white-space: nowrap;
 }
-/* line 255, ../sass/global.scss */
+/* line 262, ../sass/global.scss */
 table.table th.date, table.table th.posts {
   text-align: center;
 }
-/* line 262, ../sass/global.scss */
+/* line 269, ../sass/global.scss */
 table.table tr.unread td.topic a, table.table tr.unread td.from a {
   font-weight: bold;
 }
-/* line 267, ../sass/global.scss */
+/* line 274, ../sass/global.scss */
 table.table tr.selected td {
   background: #555 !important;
 }
-/* line 269, ../sass/global.scss */
+/* line 276, ../sass/global.scss */
 table.table .tiny {
   font-size: 9pt;
   color: #000 !important;
   font-weight: normal !important;
 }
-/* line 271, ../sass/global.scss */
+/* line 278, ../sass/global.scss */
 table.table th.icon, table.table td.icon {
   width: 50px;
 }
-/* line 272, ../sass/global.scss */
+/* line 279, ../sass/global.scss */
 table.table th.icon.wide, table.table td.icon.wide {
   width: 55px;
 }
-/* line 274, ../sass/global.scss */
+/* line 281, ../sass/global.scss */
 table.table .posts {
   width: 80px;
 }
 
-/* line 276, ../sass/global.scss */
+/* line 283, ../sass/global.scss */
 .table.no-border {
   background: none;
 }
-/* line 280, ../sass/global.scss */
+/* line 287, ../sass/global.scss */
 .table.no-border > tbody > tr th, .table.no-border > tbody > tr td {
   border-top: none;
 }
 
-/* line 286, ../sass/global.scss */
+/* line 293, ../sass/global.scss */
 .smileys {
   border: 1px solid #666;
   padding: 6px;
@@ -515,53 +524,53 @@ table.table .posts {
   font-size: 10pt;
 }
 
-/* line 294, ../sass/global.scss */
+/* line 301, ../sass/global.scss */
 .emote {
   padding: 4px 6px 2px 6px;
   float: left;
   border: 1px solid transparent;
 }
-/* line 298, ../sass/global.scss */
+/* line 305, ../sass/global.scss */
 .emote:hover {
   background: #5f5f5f;
   border: 1px solid #333;
 }
-/* line 299, ../sass/global.scss */
+/* line 306, ../sass/global.scss */
 .emote:active {
   background: #444;
   border: 1px solid #222;
 }
 
-/* line 302, ../sass/global.scss */
+/* line 309, ../sass/global.scss */
 ul.dropdown-menu.bbcode-menu {
   cursor: default;
 }
-/* line 306, ../sass/global.scss */
+/* line 313, ../sass/global.scss */
 ul.dropdown-menu.bbcode-menu li:hover {
   background: #5f5f5f;
 }
-/* line 309, ../sass/global.scss */
+/* line 316, ../sass/global.scss */
 ul.dropdown-menu.bbcode-size {
   min-width: 100px;
 }
-/* line 312, ../sass/global.scss */
+/* line 319, ../sass/global.scss */
 ul.dropdown-menu.bbcode-size li {
   padding: 2px 8px;
 }
-/* line 314, ../sass/global.scss */
+/* line 321, ../sass/global.scss */
 ul.dropdown-menu.bbcode-color {
   min-width: 152px;
   width: 152px;
   padding-left: 3px;
 }
-/* line 319, ../sass/global.scss */
+/* line 326, ../sass/global.scss */
 ul.dropdown-menu.bbcode-color li {
   display: block;
   float: left;
   padding: 3px;
   font-size: 0;
 }
-/* line 325, ../sass/global.scss */
+/* line 332, ../sass/global.scss */
 ul.dropdown-menu.bbcode-color li span {
   display: block;
   border: 1px solid #aca899;
@@ -569,49 +578,49 @@ ul.dropdown-menu.bbcode-color li span {
   width: 12px;
 }
 
-/* line 334, ../sass/global.scss */
+/* line 341, ../sass/global.scss */
 .btn.btn-bbcode {
   min-width: 32px;
   height: 30px;
   overflow: hidden;
 }
-/* line 339, ../sass/global.scss */
+/* line 346, ../sass/global.scss */
 .btn.btn-bbcode .bbcode-quote {
   font-size: 36px;
   line-height: 1;
   display: block;
 }
-/* line 344, ../sass/global.scss */
+/* line 351, ../sass/global.scss */
 .btn.btn-bbcode .bbcode-underline {
   text-decoration: underline;
   font-size: 15px;
   line-height: 12px;
 }
-/* line 349, ../sass/global.scss */
+/* line 356, ../sass/global.scss */
 .btn.btn-bbcode .bbcode-strikethrough {
   text-decoration: line-through;
   font-size: 15px;
   line-height: 12px;
 }
-/* line 354, ../sass/global.scss */
+/* line 361, ../sass/global.scss */
 .btn.btn-bbcode .bbcode-ol {
   font-size: 9px;
   line-height: 10px;
   display: block;
 }
 
-/* line 361, ../sass/global.scss */
+/* line 368, ../sass/global.scss */
 table.calendar {
   padding: 0;
   border-collapse: collapse;
 }
-/* line 363, ../sass/global.scss */
+/* line 370, ../sass/global.scss */
 table.calendar th {
   text-align: center;
   width: 14%;
   color: #ccc;
 }
-/* line 364, ../sass/global.scss */
+/* line 371, ../sass/global.scss */
 table.calendar td.day {
   width: 14%;
   height: 85px;
@@ -621,33 +630,33 @@ table.calendar td.day {
   padding: 4px;
   font-size: 8pt;
 }
-/* line 367, ../sass/global.scss */
+/* line 374, ../sass/global.scss */
 table.calendar td.day.has-events {
   border: 2px solid #000;
   background: #7f7f7f;
 }
-/* line 368, ../sass/global.scss */
+/* line 375, ../sass/global.scss */
 table.calendar td.day.today {
   border: 2px solid #000;
 }
-/* line 369, ../sass/global.scss */
+/* line 376, ../sass/global.scss */
 table.calendar td.day.today.has-events {
   background: #999;
 }
 
-/* line 376, ../sass/global.scss */
+/* line 383, ../sass/global.scss */
 #shoutbox a.at_reply {
   color: #ccc;
   text-decoration: none;
 }
-/* line 378, ../sass/global.scss */
+/* line 385, ../sass/global.scss */
 #shoutbox th.date {
   background: #3e444c;
   color: #eee;
   text-align: right;
 }
 
-/* line 385, ../sass/global.scss */
+/* line 392, ../sass/global.scss */
 #embed #shoutbox tbody {
   display: block;
   font-size: 10pt;
@@ -655,7 +664,7 @@ table.calendar td.day.today.has-events {
   overflow: auto;
 }
 
-/* line 393, ../sass/global.scss */
+/* line 400, ../sass/global.scss */
 .attachment-box {
   margin: 15px 0 0;
   padding: 8px 0;
@@ -663,7 +672,7 @@ table.calendar td.day.today.has-events {
   border-bottom: 1px solid #999;
 }
 
-/* line 398, ../sass/global.scss */
+/* line 405, ../sass/global.scss */
 a.scaled {
   text-decoration: none;
   display: block;
@@ -674,32 +683,32 @@ a.scaled {
   font-size: 10pt;
 }
 
-/* line 403, ../sass/global.scss */
+/* line 410, ../sass/global.scss */
 .quote {
   margin: 5px 0 5px 20px;
   border: 1px solid #333;
   background: #777;
   padding: 0;
 }
-/* line 405, ../sass/global.scss */
+/* line 412, ../sass/global.scss */
 .quote .author {
   margin: 0;
   padding: 5px;
   border-bottom: 1px solid #333;
   background: #555;
 }
-/* line 407, ../sass/global.scss */
+/* line 414, ../sass/global.scss */
 .quote .author img {
   margin-left: 10px;
   vertical-align: middle;
 }
-/* line 409, ../sass/global.scss */
+/* line 416, ../sass/global.scss */
 .quote .content {
   margin: 0;
   padding: 5px 15px 5px 5px;
 }
 
-/* line 412, ../sass/global.scss */
+/* line 419, ../sass/global.scss */
 .spoiler-alert {
   color: #900;
   background: #777;
@@ -708,13 +717,13 @@ a.scaled {
   text-decoration: none;
   padding: 2px 5px;
 }
-/* line 415, ../sass/global.scss */
+/* line 422, ../sass/global.scss */
 .spoiler-alert:hover {
   color: #060;
   border: 2px dashed #060;
 }
 
-/* line 417, ../sass/global.scss */
+/* line 424, ../sass/global.scss */
 .spoiler {
   display: none;
   border: 2px dashed #900;
@@ -722,7 +731,7 @@ a.scaled {
   padding: 5px;
 }
 
-/* line 421, ../sass/global.scss */
+/* line 428, ../sass/global.scss */
 pre.code {
   font-size: 10pt;
   font-family: "Courier New",mono;
@@ -735,23 +744,23 @@ pre.code {
   overflow-x: auto;
 }
 
-/* line 427, ../sass/global.scss */
+/* line 434, ../sass/global.scss */
 .gold-icon {
   color: #ffe400;
 }
 
-/* line 431, ../sass/global.scss */
+/* line 438, ../sass/global.scss */
 .sig {
   border-top: 1px dotted #ccc;
   color: #ccc;
   font-size: 10pt;
 }
-/* line 435, ../sass/global.scss */
+/* line 442, ../sass/global.scss */
 .sig object {
   display: none;
 }
 
-/* line 438, ../sass/global.scss */
+/* line 445, ../sass/global.scss */
 .thumbnail-selector {
   float: left;
   width: 500px;
@@ -764,36 +773,36 @@ pre.code {
   line-height: 0;
   padding: 10px 5px;
 }
-/* line 441, ../sass/global.scss */
+/* line 448, ../sass/global.scss */
 .thumbnail-selector .thumbnail {
   margin: 0 3px;
   height: 150px;
   display: inline-block;
 }
-/* line 443, ../sass/global.scss */
+/* line 450, ../sass/global.scss */
 .thumbnail-selector .thumbnail div {
   margin: auto;
   text-align: center;
   padding: 2px;
   font-size: 0;
 }
-/* line 445, ../sass/global.scss */
+/* line 452, ../sass/global.scss */
 .thumbnail-selector .thumbnail div.sel {
   padding: 0;
   border: 2px solid #00f;
 }
 
 @media all and (max-width: 767px) {
-  /* line 452, ../sass/global.scss */
+  /* line 459, ../sass/global.scss */
   table.table th.icon, table.table td.icon {
     width: 30px;
   }
-  /* line 454, ../sass/global.scss */
+  /* line 461, ../sass/global.scss */
   table.table th.icon.wide, table.table td.icon.wide {
     width: 35px;
   }
 
-  /* line 457, ../sass/global.scss */
+  /* line 464, ../sass/global.scss */
   .album {
     width: 100%;
     min-height: 97px;
@@ -801,55 +810,55 @@ pre.code {
     padding-left: 142px;
     margin-bottom: 15px;
   }
-  /* line 464, ../sass/global.scss */
+  /* line 471, ../sass/global.scss */
   .album .photo {
     width: 112px;
     height: 87px;
   }
-  /* line 467, ../sass/global.scss */
+  /* line 474, ../sass/global.scss */
   .album .photo img {
     max-width: 100px;
     max-height: 75px;
   }
 
-  /* line 475, ../sass/global.scss */
+  /* line 482, ../sass/global.scss */
   footer #social-media {
     float: none;
     margin: 0 0 10px;
   }
-  /* line 477, ../sass/global.scss */
+  /* line 484, ../sass/global.scss */
   footer #social-media img {
     margin: 0;
   }
-  /* line 478, ../sass/global.scss */
-  footer #social-media a {
+  /* line 486, ../sass/global.scss */
+  footer #social-media ul.footer li {
     margin: 0 3px;
   }
 
-  /* line 482, ../sass/global.scss */
+  /* line 491, ../sass/global.scss */
   div.scaled {
     display: none;
   }
 
-  /* line 483, ../sass/global.scss */
+  /* line 492, ../sass/global.scss */
   img.post-image {
     max-width: 100%;
     height: auto;
   }
 }
 @media print {
-  /* line 487, ../sass/global.scss */
+  /* line 496, ../sass/global.scss */
   a {
     color: #369 !important;
     text-decoration: none;
   }
 
-  /* line 488, ../sass/global.scss */
+  /* line 497, ../sass/global.scss */
   nav, #babynav, header, footer, #quick-reply, .jumpbox, .btn {
     display: none;
   }
 
-  /* line 491, ../sass/global.scss */
+  /* line 500, ../sass/global.scss */
   img {
     max-width: 100%;
     height: auto;
